--- a/src/main/resources/public/template/token/tokenView.html
+++ b/src/main/resources/public/template/token/tokenView.html
@@ -20,7 +20,7 @@
                     <div class="btn-list">
                         <button type="button" class="default-line" onclick="openProcessStatusPopUp()"
                                 th:text="#{process.label.processMap}"></button>
-                        <div id="button-panel" class="btn-list"></div>
+                        <div id="button-panel"></div>
                         <button type="button" class="default-line"
                                 th:onclick="aliceDocument.print('/tokens/' + [[${tokenId}]])"
                                 th:text="#{common.btn.print}"></button>
