--- a/src/main/resources/public/src/scss/document/_tag.scss
+++ b/src/main/resources/public/src/scss/document/_tag.scss
@@ -7,17 +7,23 @@
   padding-left: 0.3125rem; // 5px
   // 태그
   tag {
+    border: $tag-border;
     margin: 0.625rem 0 0.625rem 0.3125rem; // 10px 0 10px 5px
-    div {
+
+    // 태그 문구
+    > div {
       color: $tag-font-color;
       border-radius: 0.0625rem; // 1px
       padding: 0.375rem 0.5rem; // 6px 8px
+      
       &::before {
+        animation: none;
         box-shadow: 0 0 0 1.25rem $tag-bg-color inset;
       }
       span {
         height: 1.25rem; // 20px
       }
+      
       &:hover {
         &::before {
           color: $tag-hover-font-color;
@@ -25,43 +31,64 @@
         }
       }
     }
-    &:hover {
-      div::before {
-        color: $tag-hover-font-color;
-        box-shadow: 0 0 0 1.25rem $tag-hover-bg-color inset !important;
+
+    // 삭제 버튼
+    .tagify__tag__removeBtn {
+      width: 1.125rem; // 18px
+      height: 1.125rem; // 18px
+      font-family: $font-family;
+      font-size: 1rem; // 16px
+      font-weight: $font-weight-bold;
+      color: $tag-btn-remove-color;
+      margin-left: 0;
+
+      &:after {
+        height: 1.125rem; // 18px
+        line-height: 0.875rem; // 14px
       }
-    }
-  }
-  // 삭제 버튼
-  .tagify__tag__removeBtn {
-    font-weight: $font-weight-bold;
-    color: $hover-blue;
-    &:hover {
-      color: $white;
-      background-color: $tag-invalid-font-color;
-      + div {
-        color: $tag-invalid-font-color;
-        &::before {
-          box-shadow: 0 0 0 1.25rem $tag-invalid-bg-color inset !important;
+
+      &:hover {
+        color: $tag-hover-btn-remove-color;
+        background-color: $tag-hover-btn-remove-bg-color;
+        + div {
+          color: $tag-hover-font-color;
+          &::before { box-shadow: 0 0 0 1.25rem $tag-hover-bg-color inset !important; }
+          span { opacity: 1; }
         }
       }
     }
+
+    // 마우스 오버시
+    &:hover {
+      border: $tag-hover-border;
+      // 태그 문구
+      > div {
+        color: $tag-hover-font-color;
+        &::before { box-shadow: 0 0 0 1.25rem $tag-hover-bg-color inset !important; }
+        span { opacity: 1; }
+      }
+      // 삭제 버튼
+      .tagify__tag__removeBtn {
+        color: $tag-hover-btn-remove-color;
+        background-color: $tag-hover-btn-remove-bg-color;
+      }
+    }
   }
+
   // 동일 태그 입력시
   .tagify--notAllowed:not(.tagify__tag--editable) {
-    .tagify__tag__removeBtn {
-      color: $tag-invalid-font-color !important;
+    // 태그 문구
+    > div {
+      color: $tag-invalid-color !important;
+      &::before { box-shadow: 0 0 0 1.25rem $tag-invalid-bg-color inset !important; }
+      span { opacity: 1; }
     }
-    div {
-      color: $tag-invalid-font-color !important;
-      &::before {
-        box-shadow: 0 0 0 1.25rem $tag-invalid-bg-color inset !important;
-      }
-      span {
-        opacity: 1;
-      }
+    // 삭제 버튼
+    .tagify__tag__removeBtn {
+      color: $tag-invalid-color !important;
     }
   }
+
   // 태그를 입력하세요 input box
   .tagify__input {
     margin: 0.625rem 0.3125rem; // 10px 5px
