--- a/src/main/resources/public/template/token/tokenEdit.html
+++ b/src/main/resources/public/template/token/tokenEdit.html
@@ -22,7 +22,7 @@
                     </div>
                     <div class="btn-list">
                         <button type="button" class="default-line" onclick="openProcessStatusPopUp()" th:text="#{process.label.processMap}"></button>
-                        <div class="btn-list" id="button-panel"></div>
+                        <div id="button-panel"></div>
                         <button type="button" class="default-line" th:onclick="aliceDocument.print('/tokens/' + [[${tokenId}]])" th:text="#{common.btn.print}"></button>
                     </div>
                 </div>
