--- a/src/main/resources/public/src/scss/template/_buttons.scss
+++ b/src/main/resources/public/src/scss/template/_buttons.scss
@@ -177,7 +177,8 @@ button {
       }
 
       &:not(:disabled) {
-        &:active { // pressed
+        &:active,
+        &.active { // pressed
           color: map-get($btn-pressed-font-colors, #{$theme});
           background-color: map-get($btn-pressed-bg-colors, #{$theme});
           border-color: map-get($btn-pressed-border-colors, #{$theme});
