--- a/src/main/resources/public/src/scss/portal/_error.scss
+++ b/src/main/resources/public/src/scss/portal/_error.scss
@@ -10,7 +10,7 @@
   background-color: $error-bg-color;
   overflow: hidden;
 
-  .error-img {
+  .logo {
     position: relative;
     top: -59.1875rem; // -947px
     margin: 5rem 0 0 5rem; // 80px 80px
