--- a/src/main/resources/public/src/scss/portal/_session-invalid.scss
+++ b/src/main/resources/public/src/scss/portal/_session-invalid.scss
@@ -9,7 +9,7 @@
   background-color: $session-invalid-bg-color;
   overflow: hidden;
 
-  .session-img {
+  .logo {
     position: relative;
     top: -59.1875rem; // -947px
     margin: 5rem 0 0 5rem; // 80px 80x
