--- a/src/main/resources/public/template/layout/navigation.html
+++ b/src/main/resources/public/template/layout/navigation.html
@@ -3,7 +3,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
 <div class="logo">
-    <img class="navigation-logo" th:src="@{/assets/theme/{theme}/media/icons/(theme=${#authentication.details.theme})} + 'icon_logo.svg'" width="152" height="26" alt="Zenius ITSM">
+    <img class="navigation-logo" th:src="@{/assets/theme/{theme}/media/icons/(theme=${#authentication.details.theme})} + 'icon_logo_white.svg'" width="152" height="26" alt="Zenius ITSM">
 </div>
 <div class="navigation">
     <div class="breadcrumb">
