--- a/src/main/resources/public/template/error.html
+++ b/src/main/resources/public/template/error.html
@@ -11,7 +11,7 @@
     <div class="portal-container flex-row">
         <div class="error-background float-left">
             <img th:src="@{/assets/media/images/error/img_error_caution.png}"/>
-            <img th:src="@{/assets/media/images/error/img_error_logo_alice.png}" class="error-img">
+            <img class="logo"  th:src="@{/assets/media/icons/icon_logo.svg}" width="243" height="41" alt="Zenius ITSM" />
         </div>
         <div class="error-form float-right">
             <h1 th:text="#{error.label.topPhrase}"></h1>
