--- a/src/main/resources/public/assets/css/portal.css
+++ b/src/main/resources/public/assets/css/portal.css
@@ -2666,6 +2666,77 @@ button.ghost-line:disabled .icon {
   background: transparent;
 }
 
+.inner-scrollbar-dark > .os-scrollbar-horizontal {
+  right: 0.625rem;
+  height: 0.75rem;
+}
+
+.inner-scrollbar-dark > .os-scrollbar-horizontal > .os-scrollbar-track > .os-scrollbar-handle {
+  min-width: 1.875rem;
+}
+
+.inner-scrollbar-dark > .os-scrollbar-horizontal .os-scrollbar-handle:before {
+  content: '';
+  position: absolute;
+  left: 0;
+  right: 0;
+  display: block;
+  top: -0.375rem;
+  bottom: -0.125rem;
+}
+
+.inner-scrollbar-dark > .os-scrollbar-vertical {
+  bottom: 0.625rem;
+  width: 0.25rem;
+}
+
+.inner-scrollbar-dark > .os-scrollbar-vertical > .os-scrollbar-track > .os-scrollbar-handle {
+  min-height: 1.875rem;
+}
+
+.inner-scrollbar-dark > .os-scrollbar-vertical .os-scrollbar-handle:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  display: block;
+  left: -0.375rem;
+  right: -0.125rem;
+}
+
+.inner-scrollbar-dark > .os-scrollbar-corner {
+  width: 0.625rem;
+  height: 0.625rem;
+  background-color: transparent;
+}
+
+.inner-scrollbar-dark > .os-scrollbar {
+  box-sizing: border-box;
+  background: transparent;
+}
+
+.inner-scrollbar-dark > .os-scrollbar > .os-scrollbar-track {
+  background: #283238;
+  border-radius: 0.5rem;
+}
+
+.inner-scrollbar-dark > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle {
+  border-radius: 0.5rem;
+  background: #3F4B56;
+}
+
+.inner-scrollbar-dark > .os-scrollbar > .os-scrollbar-track > .os-scrollbar-handle.active {
+  background: #586872;
+}
+
+.inner-scrollbar-dark > .os-scrollbar:hover > .os-scrollbar-track > .os-scrollbar-handle {
+  background: #586872;
+}
+
+.inner-scrollbar-dark > .os-scrollbar.os-scrollbar-unusable {
+  background: transparent;
+}
+
 .scrollbar.os-host-rtl > .os-scrollbar-horizontal {
   left: 0.625rem;
   right: 0;
