#9394 [Modal] 프로세스 등록 화면
- 프로세스 등록 모달로 변경

--- a/src/main/resources/public/template/process/processAdminSearch.html
+++ b/src/main/resources/public/template/process/processAdminSearch.html
@@ -21,7 +21,7 @@
             </div>
             <div class="ml-auto">
                 <button th:class="default-line" onclick="openProcessImport();" sec:authorize="hasAuthority('process.create')" th:text="#{process.btn.import}"></button>
-                <button th:class="default-fill" onclick="openProcessEdit();" sec:authorize="hasAuthority('process.create')" th:text="#{common.btn.add}"></button>
+                <button th:class="default-fill" onclick="openProcessRegister();" sec:authorize="hasAuthority('process.create')" th:text="#{common.btn.add}"></button>
             </div>
         </div>
         <div class="list" id="processList"></div>
@@ -97,7 +97,7 @@
             });
         }
 
-        // 프로세스 등록 / 수정 모달 내부 Tempalte
+        // 프로세스 등록 / 수정 모달 내부 Template
         function createModalContent(data) {
             return `<div class="flex-column">` +
                        `<input type="hidden" id="process_status" value="${data !== undefined ? data.status : ''}" />` +
@@ -194,6 +194,48 @@
             }
         }
 
+        // 프로세스 등록 모달 오픈
+        function openProcessRegister() {
+            const processModal = new modal({
+                title: i18n.msg('process.label.register'),
+                body: createModalContent(),
+                classes: 'form-edit',
+                buttons: [{
+                    content: i18n.msg('common.btn.register'),
+                    classes: "point-fill",
+                    bindKey: false,
+                    callback: function(modal) {
+                        saveProcess();
+                    }
+                },{
+                    content: i18n.msg('common.btn.close'),
+                    classes: "default-line",
+                    bindKey: false,
+                    callback: function(modal) {
+                        modal.hide();
+                    }
+                }],
+                close: {
+                    closable: false,
+                },
+                onCreate: function(modal) {
+                    // 스크롤바 추가
+                    OverlayScrollbars(document.querySelector('.modal-content'), {className: 'scrollbar'});
+                    OverlayScrollbars(document.getElementById('process_description'), {
+                        className: 'inner-scrollbar',
+                        resize: 'vertical',
+                        sizeAutoCapable: true,
+                        textarea: {
+                            dynHeight: false,
+                            dynWidth: false,
+                            inheritedAttrs: "class"
+                        }
+                    });
+                }
+            });
+            processModal.show();
+        }
+
         // REST API
         function restSubmit(method, url, data) {
             const opt = {
@@ -219,11 +261,6 @@
                 }
             };
             aliceJs.sendXhr(opt);
-        }
-
-        // 프로세스 상세 화면 오픈
-        function openProcessView(processId) {
-            window.open('/processes-admin/' + processId + '/view', 'process_edit', 'width=550, height=300');
         }
 
         // 프로세스 디자이너 편집화면 오픈
@@ -252,6 +289,7 @@
             window.open('/processes/' + processId + '/view', 'process_' + processId + '_view', 'width=' + _width + ',height=' + _height + ','+ specs);
         }
 
+        // 프로세스 IMPORT
         function importProcess() {
             if (checkValidation()) {
                 let fileList = fileUploader.getFile();
@@ -292,7 +330,6 @@
 
         // 프로세스 IMPORT 화면 오픈
         function openProcessImport() {
-<!--            window.open('/processes/import', 'process_import', 'width=600, height=620');-->
             const importModal = new modal({
                 title: i18n.msg('process.label.import'),
                 body: createImportModalContent(),
@@ -405,9 +442,9 @@
                 processNameObject = document.createElement('a');
                 processNameObject.onclick = function() {
                     if (document.getElementById('updatable').value === 'true') {
-                        openProcessEdit(data.id);
+                        openProcessEdit(data.id, false);
                     } else {
-                        openProcessView(data.id);
+                        openProcessView(data.id, true);
                     }
                 }
             } else {
