--- a/src/main/resources/public/src/scss/theme/default/_thumbnail.scss
+++ b/src/main/resources/public/src/scss/theme/default/_thumbnail.scss
@@ -42,7 +42,7 @@
       .thumbnail-preview-img {
         width: 100%;
         height: 100%;
-        background-size: auto;
+        background-size: contain;
         background-repeat: no-repeat;
         background-position: center center;
       }
